phd/testing_applications/cpu-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpu-app
  template:
    metadata:
      labels:
        app: cpu-app
    spec:
      containers:
      - name: cpu-app-container
        image: docker.io/pepi1989/cpu-app:v1
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8003
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 0
            preference:
              matchExpressions:
              - key: label-1
                operator: In
                values:
                - key-1
          - weight: 0
            preference:
              matchExpressions:
              - key: label-2
                operator: In
                values:
                - key-2
          - weight: 0
            preference:
              matchExpressions:
              - key: label-3
                operator: In
                values:
                - key-2
