phd/testing_applications/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /api/cpu_latency
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 80
